--- a/templates/index_bla.html
+++ b/templates/index_bla.html
@@ -5,8 +5,9 @@
 <body>
     <div class="App">
         <header class="App-header">
+            <h1>Bla</h1> 
             <img src="{{ url_for('static', filename='Octocat.png') }}" class="App-logo" alt="logo" />
-            <p><a href="{{ url_for('bla_world') }}">goto bla</a>
+            <p>
                 GitHub Codespaces <span class="heart">♥️</span> Flask XX
             </p>
             <p class="small">
