--- a/templates/index_bla.html
+++ b/templates/index_bla.html
@@ -5,10 +5,10 @@
 <body>
     <div class="App">
         <header class="App-header">
-            <h1>Bla</h1> 
+            <h1>Bla Bla</h1> 
             <img src="{{ url_for('static', filename='Octocat.png') }}" class="App-logo" alt="logo" />
             <p>
-                GitHub Codespaces <span class="heart">♥️</span> Flask XX
+                GitHub Codespaces <span class="heart">♥️</span> Flask
             </p>
             <p class="small">
                 Edit <code>templates/index.html</code> and refresh to see your changes!
