--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
         <header class="App-header">
             <img src="{{ url_for('static', filename='Octocat.png') }}" class="App-logo" alt="logo" />
             <p><a href="{{ url_for('bla_world') }}">goto bla</a>
-                GitHub Codespaces <span class="heart">♥️</span> Flask XX
+                GitHub Codespaces <span class="heart">♥️</span> Flask ABC
             </p>
             <p class="small">
                 Edit <code>templates/index.html</code> and refresh to see your changes!
